# Mugato

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cabal.project  coregen.sh  hie.yaml  mugato.cabal
cmake/: verilator-config.cmake
coregen/: cordic_gen.py
ise_files/: audio_interface.vhd  mugato.xise  pa.fromHdl.tcl  test_driver_isim_beh.wdb
scripts/: generate_tests.sh
src/: audio_interface.v  audio_interface.vhd  avr_interface.vhd  cordic.vhd  mojo.ucf  mojo_top.vhd  nc_osc.vhd  sine_lut.vhd  spi_slave.vhd
src/mojo_v3/: cclk_detector.vhd  mojo_top.vhd  serial_rx.vhd  serial_tx.vhd
tests/: ai_tb.cpp  audio_interface.cpp  audio_interface_tests.cpp  cordic_tests.cpp  nco_test.vhd  test_driver.vhd  testbench.h
